--- a/index.html
+++ b/index.html
@@ -68,14 +68,46 @@
       </div>
         </div><br>
              <div class="jumbotron">
-                <div class="container text-center"> 
+                <div class="container text-center">
+                    <div class="Date of birth">
     <h2>ENTER YOUR DATE OF BIRTH</h2> 
-  </div>
+    <div class="add-stylist-form">
+        <form>
+     <div class="form-group mb15">
+       <label class="label"></label> 
+       <div class="input-group mb15">
+        <span class="input-group-addon">
+            <i class="fa fa-calendar"></i></span>
+				                <input type="text" placeholder="mm/dd/yyyy"
+                                 id="myBirthDate" class="form-control" autocomplete="off">
+       </div>   
+
+       </div> 
+    </div>       
+        </form>
+    </div>
+  </div></div>
  </div><br>
 
 <div class="jumbotron">
- <div class="container text-center">  
-  <h3>Gender</h3>
+ <div class="container text-center">
+ <div class="form-group mb15">
+   <label class="label"></label>
+   <h3>Your Gender:</h3>
+   <div class="rdio rdio-default fs11">
+    <input type="radio" name="gender" id="male" value="Male">
+    <label for="male">&nbsp;&nbsp;Male</label>
+</div>
+<div class="rdio rdio-default fs11">
+    <input type="radio" name="gender" value="Female" id="female">
+    <label for="female">&nbsp;&nbsp;Female</label>
+ </div>
+</div>
+</form>	
+</div> 
+
+ </div>      
+  
     
 </div>    
 </div><br>
@@ -83,11 +115,13 @@
 <div class="jumbotron">
 <div class="container text-center ">
       <h3>RESULTS</h3>     
-<p>See your akan name!</p>
+<p>You were born on!</p>
 <button onclick="document.location='results.html'">Click Here</button>
 <a href="results.html"></a>
 </div>      
-  </div>
+  </div> </form>
+
+  
 
 
 <footer class="container-fluid text-center">
