--- a/results.html
+++ b/results.html
@@ -20,7 +20,14 @@
  
     </style>
    <body>
-       <h1>YOUR AKAN NAME IS:</h1>
-   </body> 
+       <h1>YOU WERE BORN ON:</h1>
+   </body>
+   <div class="you-were-born-on">
+    <p id="message" class="output"></p>
+</div>
+</div>
+<div class="col-md-2"></div>
+</div>
+
     
     </html>
