added an inline style

--- a/results.html
+++ b/results.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+ <html lang="en"> 
+ <head>
   <title>Akan names</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
- body{
-     background-color: rgb(212, 58, 97);
- }
- h1 {
-     color:rgb(93, 139, 170)
- }
- h1{
-     text-align: center;
-     font-size: 60px;
-     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
- }
-
- 
-    </style>
-   <body>
-       <h1>YOU WERE BORN ON:</h1>
-   </body>
-   <div class="you-were-born-on">
-    <p id="message" class="output"></p>
-</div>
-</div>
-<div class="col-md-2"></div>
-</div>
-
-    
-    </html>
+   <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+     <style>
+      body{
+       background-color: rgb(212, 58, 97);
+        }
+         h1 {
+          color:rgb(93, 139, 170)
+           }
+            h1{
+             text-align: center;
+              font-size: 60px;
+               font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                } 
+                 </style>
+                  <body>
+                   <h1>YOUR AKAN NAME IS!:</h1>
+                 </body>
+                <body>
+               <h1>YOU WERE BORN ON!:</h1>
+             </body>
+            <div class="you-were-born-on">
+           <p id="message" class="output"></p>
+          </div>
+         </div>
+        <div class="col-md-2"></div>
+     </div>
+</html>
