Added a new button

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                            <div class="form-group mb15">
                          <label class="label"></label>
-                       <h3>Your Gender:</h3>
+                       <h3 id="text">Your Gender:</h3>
 
                      <div class="rdio rdio-default fs11">
                    <input type="radio" name="gender" id="male" value="Male">
@@ -115,11 +115,11 @@
                 </div>
 
              <div class="rdio rdio-default fs11">
-           <input type="radio" name="gender" value="Female" id="female">
+           <input id="inp1"type="radio" name="gender" value="Female" id="female">
          <label for="female">&nbsp;&nbsp;Female</label>
-       </div>
-      </div>
-    </form>	
+    </form>
+    
+             </div></div>	
   </div> 
 </div>      
  </div>    
@@ -128,10 +128,10 @@
    <div class="jumbotron">
 
     <div class="container text-center ">
+
      <h3>RESULTS</h3>     
       <p>Click here to get results!</p>
-      <button onclick="document.location='results.html'">Click here</button>
-       
+      <button onclick="document.location='results.html'">Click here</button> 
         <a href="results.html"></a>
          </div>      
           </div>
