--- a/results.html
+++ b/results.html
@@ -17,16 +17,9 @@
                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                 } 
                  </style>
-                  <body>
-                   <h1>YOUR AKAN NAME IS!:</h1>
-                 </body>
-                <body>
-               <h1>YOU WERE BORN ON!:</h1>
-             </body>
+                  
             <div class="you-were-born-on">
-           <p id="message" class="output"></p>
-          </div>
-         </div>
-        <div class="col-md-2"></div>
-     </div>
+            <h1>YOU WERE BORN ON!</h1>
+           <p id="message"><class="output"></p>
+           
 </html>
